--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -3,14 +3,12 @@ html, body{
     height: 100%;
     padding: 0;
 }
-my-container{
-    column-gap: 10px;
-}
+
 /* Matrix quadrant section*/
 .quadrants{
+    box-sizing: border-box;
     height: 90vh;
-    background-color: white;
-    border: 2px solid rgb(94, 119, 167);
+    background-color: #e2e8f0;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -20,37 +18,38 @@ my-container{
 
 .quads{
     overflow: inherit;
-    height: 44.7vh;
-    border: 2px solid rgb(255, 255, 255);
+    height: 43vh;
+    border: 2px solid #e2e8f0;
     border-radius: 10px;
+    margin: 5px;
 }
 
 .quad-1{
-    background-color: cornflowerblue;
+    background-color: #00cd8b;
 }
 
 .quad-2{
-    background-color: rgb(93, 129, 196);
+    background-color: #35adc2;
 }
 
 .quad-3{
-    background-color: rgb(94, 119, 167);
+    background-color: #6293f0;
 }
 
 .quad-4{
-    background-color: rgb(94, 108, 133);
+    background-color: #17bfa3;
 }
 
 /*Features section */
 
 .features{
-    background-color: rgb(255, 255, 255);
+    background-color: #e2e8f0;
     height: 90vh;
-    border: 2px solid rgb(94, 119, 167);
     overflow: auto;
     display: grid;
     grid-template-rows: 6% 84% 5%;
     padding: 2px;
+    margin: 5px;
     border-radius: 0px 10px 10px 0px;
     border-left-style:none ;
 }
@@ -58,31 +57,52 @@ my-container{
 .features-header{
     text-align: center;
     padding-top: 2%;
-    background-color: rgb(66, 113, 141);
+    background-color: rgb(25,28,147);
     color: white;
     width: inherit;
     border-radius: 10px 10px 0px 0px;
 }
 
+.quad-header{
+    text-align: center;
+    opacity: 80%;
+    font-size: medium;
+    width: 100%;
+    
+}
+
 .features-body{
-    background-color: rgb(190, 201, 219);
+    background-color: white;
     overflow: auto;
     border-radius: 0px 0px 10px 10px;
 }
 
 .features-bottom{
-    margin: 10px 0;
+    margin: 5px 0;
     bottom: 0px;
 }
 
+#feature-button{
+    border-radius: 10px;
+
+}
+
 .my-feature{
-    height: 50px;
-    width: 70px;
-    background-color: rgb(32, 46, 46);
+    overflow: auto;
+    height: 40px;
+    width: 270px;
+    background-color:rgb(1, 3, 81);
     color: white;
     border-radius: 10px;
     overflow: auto;
     text-align: center;
+    margin: 5px;
+    padding: 5px;;
+}
+#feature-instruction{
+    text-align: center;
+    opacity: 50%;
+    font-size: small;
 }
 
 .my-feature-content{
