--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -9,6 +9,7 @@
     width: 100%;
     height: 70%;
     position: absolute;
+    overflow: hidden;
 }
 .matrix{
     position: absolute;
@@ -23,16 +24,23 @@
     position: absolute;
     overflow: hidden;
 }
+#quad2.fullscreen{
+    z-index: 9999; 
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+ }
 .quad-heading{
     text-align: center;
     margin: 5px 0;
+    color: white;
 }
 .quadrant-1{
     background-color: #00cd8b;
     top: 0;
     left: 0;
-    resize: vertical;
-    z-index: 10;
 }
 .quadrant-2{
     background-color: #35adc2;
@@ -49,6 +57,17 @@
     bottom: 0;
     right: 0;
 }
+
+/*Expand quadrant screen*/
+#expand_button{
+    position: absolute;
+    bottom: 3;
+    right: 3;
+    border: none;
+    background-color: rgba(245, 222, 179, 0);
+}
+
+
 
 /*features*/
 .features{
