--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -67,8 +67,6 @@
     background-color: rgba(245, 222, 179, 0);
 }
 
-
-
 /*features*/
 .features{
 
@@ -156,7 +154,7 @@
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 1px;
-
+}
 #feature-tip{
     margin: 10px;
     font-size: small;
