--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -24,14 +24,6 @@
     position: absolute;
     overflow: hidden;
 }
-#quad2.fullscreen{
-    z-index: 9999; 
-    width: 100%; 
-    height: 100%; 
-    position: fixed; 
-    top: 0; 
-    left: 0; 
- }
 .quad-heading{
     text-align: center;
     margin: 5px 0;
@@ -47,6 +39,14 @@
     top: 0;
     right: 0;
 }
+#quad2.fullscreen{
+    z-index: 9999; 
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+}
 .quadrant-3{
     background-color: #6293f0;
     bottom: 0;
@@ -59,17 +59,16 @@
 }
 
 /*Expand quadrant screen*/
-#expand_button{
+.expand_button{
     position: absolute;
     bottom: 3;
     right: 3;
     border: none;
-    background-color: rgba(245, 222, 179, 0);
+    background-color: rgba(0,0,0,0);
 }
 
 /*features*/
 .features{
-
     position: absolute;
     width: 30%;
     height: 100%;
@@ -103,7 +102,6 @@
     text-align: center;
     opacity: 50%;
 }
-
 .feature-bottom{
     overflow: hidden;
     height: 10%;
@@ -113,7 +111,6 @@
     position: static;
 
 }
-
 #add-feature-content{
     height: 100%;
     width: 100%;
@@ -125,9 +122,7 @@
     background-color:rgb(1, 3, 81);
     color: white;
     border-radius: 10px;
-
     overflow: hidden;
-
     text-align: center;
     margin: 5px 15;
 }
@@ -162,7 +157,6 @@
 }
 
 .my-feature-content{
-
     display: inline-block;
     padding: 5px 30px;
     border-radius: 50px;
