--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,26 @@ form{
     background: #010351;
     border: none;
 }
+.purple_buttonE {
+    text-align: center;
+    width: 10%;
+    display: inline-block;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 6px 12px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #010351;
+    border: none;
+}
+
+input[type="file"]{
+   display: none;
+}
 .home_green_button {
     text-align: center;
     width: 30%;
