--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,21 @@ form{
     background: #1acc8d;
     border: none;
 }
+.edit_green_button {
+    text-align: center;
+    width: 30%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    /* display: inline-block; */
+    padding: 5px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #1acc8d;
+    border: none;
+}
 .modal_green_button {
     text-align: center;
     width: 100%;
@@ -76,6 +91,19 @@ form{
     font-size: 16px;
     letter-spacing: 1px;
     display: inline-block;
+    padding: 5px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #be0000;
+    border: none;
+}
+.reset_red_button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    /* display: inline-block; */
     padding: 5px 30px;
     border-radius: 50px;
     transition: 0.5s;
