--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -69,14 +69,12 @@
 
 /*features*/
 .features{
-
     position: absolute;
     width: 30%;
     height: 100%;
     right: 0;
     border: 1px solid rgb(25,28,147);
     border-radius: 10px;
-
 }
 .feature-head{
     text-align: center;
@@ -125,11 +123,10 @@
     background-color:rgb(1, 3, 81);
     color: white;
     border-radius: 10px;
-
     overflow: hidden;
-
     text-align: center;
     margin: 5px 15;
+    list-style-type: none;
 }
 
 /*footer*/
@@ -147,7 +144,6 @@
     color: #fff;
 }
 
-
 /*green button*/
 .green_button {
     font-family: "Montserrat", sans-serif;
@@ -162,7 +158,6 @@
 }
 
 .my-feature-content{
-
     display: inline-block;
     padding: 5px 30px;
     border-radius: 50px;
