--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -29,10 +29,23 @@
     overflow-y: scroll;
     scrollbar-width: none;
 }
+.quad-fullscreen{
+    border-radius: 10px;
+    z-index: 9999; 
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    overflow: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none; 
+}
 .quad-heading{
     text-align: center;
     margin: 5px 0;
     color: white;
+    cursor: pointer;
 }
 .quadrant-1{
     background-color: #00cd8b;
@@ -43,14 +56,6 @@
     background-color: #35adc2;
     top: 0;
     right: 0;
-}
-#quad2.fullscreen{
-    z-index: 9999; 
-    width: 100%; 
-    height: 100%; 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
 }
 .quadrant-3{
     background-color: #6293f0;
@@ -190,12 +195,3 @@
     background: #be0000;
     border: none;
 }
-<<<<<<< HEAD
-=======
-
-li {
-    display: inline-block;
-    margin: 10 10 10px ;
-
-  }
->>>>>>> master
