Implemented Deleted employee

--- a/assets/css/employees.css
+++ b/assets/css/employees.css
@@ -5,7 +5,7 @@
 
 .employee{
     width: 100%;
-    background-color: rgb(83, 85, 185);
+    background-color: #010351;
     margin: 10px 0;
     color: white;
     border-radius: 5px;
