--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -11,16 +11,18 @@
 .container-matrix{
     width: 100%;
     height: 70%;
-    position: absolute;
-    overflow: hidden;
+    position: relative;
 }
+
 .matrix{
-    position: absolute;
+    position:absolute;
     width: 68%;
     height: 100%;
     left: 0;
+
 }
 .quadrant{
+    padding:0;
     border-radius: 10px;
     width: 49%;
     height: 49%;
@@ -51,6 +53,7 @@
     background-color: #00cd8b;
     top: 0;
     left: 0;
+   
 }
 .quadrant-2{
     background-color: #35adc2;
@@ -66,6 +69,7 @@
     background-color: #17bfa3;
     bottom: 0;
     right: 0;
+   
 }
 
 /*Expand quadrant screen*/
@@ -195,3 +199,21 @@
     background: #be0000;
     border: none;
 }
+.project-details {
+    padding: 0;
+    font-size: 18px;
+ 
+  }
+  .project-details ul {
+    right: 10;
+    margin: 2;
+    padding: 0;
+    display: flex;
+    list-style: none;
+  }
+
+  .project-details li {
+    position: relative;
+  }
+
+      
