--- a/assets/css/employees.css
+++ b/assets/css/employees.css
@@ -5,14 +5,13 @@
 
 .employee{
     width: 100%;
-    background-color: #010351;
+    background-color: rgba(1, 4, 136, 0.9);
     margin: 10px 0;
     color: white;
     border-radius: 5px;
     display: flex;
-    padding: 15px 25px;
+    padding: 15px 20px;
     align-items: baseline;
-
 }
 
 #name{
@@ -21,4 +20,22 @@
 
 #cross{
     margin-left: auto;
+}
+.hero{
+    display: flex;
+    width: 100%;
+}
+.hero > a{
+    margin-left: auto;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 10px 35px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #1acc8d;
+    border: none;
 }
