--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -203,8 +203,15 @@
 /*Project details */
 #project-details {
     display: flex;
+    align-items: baseline;
 }
-#project-details>a {
+#project-details>button {
     margin-left: auto;
+    padding: 5px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #1acc8d;
+    border: none;
 }
       
