--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -126,6 +126,7 @@
     color: black;
 }
 .my-feature{
+    display: flex;
     height: 15%;
     width: 90%;
     background-color:rgb(1, 3, 81);
@@ -135,6 +136,26 @@
     text-align: center;
     margin: 5px 15;
     list-style-type: none;
+    padding: 10px 10px;
+}
+#feature-tip{
+    margin: 10px;
+    font-size: small;
+    opacity: 50%;
+}
+
+.my-feature-content{
+    display: inline-block;
+    padding: 5px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #1acc8d;
+    border: none;
+}
+
+.featureButtons{
+    margin-left:auto;
 }
 
 /*footer*/
@@ -166,21 +187,6 @@
     background: #1acc8d;
     border: none;
 }
-#feature-tip{
-    margin: 10px;
-    font-size: small;
-    opacity: 50%;
-}
-
-.my-feature-content{
-    display: inline-block;
-    padding: 5px 30px;
-    border-radius: 50px;
-    transition: 0.5s;
-    color: #fff;
-    background: #1acc8d;
-    border: none;
-}
 /*red button*/
 .red_button {
     font-family: "Montserrat", sans-serif;
@@ -195,3 +201,4 @@
     background: #be0000;
     border: none;
 }
+
