--- a/assets/css/iem.css
+++ b/assets/css/iem.css
@@ -127,6 +127,7 @@
 }
 .my-feature{
     display: flex;
+    align-items: baseline;
     height: 15%;
     width: 90%;
     background-color:rgb(1, 3, 81);
@@ -134,16 +135,15 @@
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
-    margin: 5px 15;
-    list-style-type: none;
-    padding: 10px 10px;
+    margin: 15 15;
+    padding: 5 10;
 }
 #feature-tip{
     margin: 10px;
     font-size: small;
     opacity: 50%;
 }
-
+/* 
 .my-feature-content{
     display: inline-block;
     padding: 5px 30px;
@@ -152,12 +152,19 @@
     color: #fff;
     background: #1acc8d;
     border: none;
-}
+} */
 
 .featureButtons{
-    margin-left:auto;
-}
+    display: flex;
+   margin-left: auto;
 
+}
+.featureButtons > i{
+    margin:5px;
+}
+.featureContent{
+    overflow-y: scroll;
+}
 /*footer*/
 .my-footer{
     position: absolute;
