Pagination of tables

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,3 +168,83 @@ input[type="file"]{
 .position_right{
     text-align: right;
 }
+.pagination li:hover{
+    cursor: pointer;
+}
+/*#maxRows{
+
+    display: none;
+}*/
+#maxRows:hover {
+    border-color: #888;
+  }
+  /* Focus style */
+  #maxRows:focus {
+    border-color: #aaa;
+    /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222; 
+    outline: none;
+  }
+  
+  /* Set options to normal weight */
+  #maxRows option {
+    font-weight:normal;
+  }
+  
+  
+  /* Support for rtl text, explicit support for Arabic and Hebrew */
+  *[dir="rtl"] #maxRows, :root:lang(ar) #maxRows, :root:lang(iw) #maxRows {
+    background-position: left .7em top 50%, 0 0;
+    padding: .6em .8em .5em 1.4em;
+  }
+  
+  /* Disabled styles */
+
+  
+  #maxRows:disabled:hover, #maxRows[aria-disabled=true] {
+    border-color: #aaa;
+  }
+  #maxRows {
+    display: block;
+    font-size: 16px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 100%;
+    max-width: 10%; /* useful when width is set to anything other than 100% */
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+  
+  }
+  .pagination {
+    display: inline-block;
+  }
+  
+  .pagination li {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination li.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .pagination li:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+  }
